WIP fix persistent touch state bug on iOS

--- a/src/app/components/next-button/next-button.module.css
+++ b/src/app/components/next-button/next-button.module.css
@@ -32,7 +32,7 @@
 
 @media (max-width: 650px) {
   .nextButton {
-    height: 2.5rem;
+    height: 2.75rem;
     width: 183px;
     font-size: 16px;
     padding-bottom: 4px;
@@ -40,6 +40,6 @@
     padding-right: 14px;
     justify-content: center;
     margin-top: 5px;
-    margin-bottom: 37px;
+    margin-bottom: 47px;
   }
 }
